--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
+    <script src="colorful.js" defer></script>
 </head>
 <body>
     <header>
