--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>共同制作サンプル</title>
     <link rel="stylesheet" href="style.css">
+    <script src="colorful.js" defer></script>
 </head>
 <body>
     <header>
