きらきらして見にくい

--- a/index.html
+++ b/index.html
@@ -7,22 +7,35 @@
     <script src="colorful.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>共同制作ホームページ</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+  <header class="glass-header">
+    <h1 class="logo">Team Practice</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-    <section>
-        <h2>Welcome!</h2>
-        <p>これは GitHub Desktop の共同制作練習のためのサンプルサイトです。</p>
+  <main class="hero">
+    <section class="hero-card">
+      <h2>ようこそ！</h2>
+      <p>
+        カラフルな背景と一緒に、GitHub 共同制作の練習中です。<br>
+        このページは「派手だけどシンプル」なデザインのサンプルです。
+      </p>
+      <div class="hero-buttons">
+        <a href="about.html" class="btn btn-primary">メンバーを見る</a>
+        <a href="contact.html" class="btn btn-outline">メッセージを送る</a>
+      </div>
     </section>
+  </main>
 
-    <footer>
-        <p>© 2025 Team Practice</p>
-    </footer>
+  <footer class="glass-footer">
+    <p>© 2025 Team Practice</p>
+  </footer>
+
+
+  <script src="colorful.js"></script>
 </body>
+
 </html>
