add confetti button

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <div class="stat">
                             <span class="stat__label">Confetti</span>
                             <span class="stat__value">クリックして！</span>
+                            <button class="btn tiny" data-confetti-btn type="button">Confetti!</button>
                         </div>
                     </div>
                 </div>
